[tool.poetry]
name = "ua-box-api"
version = "1.0.1"
description = "Provides easy interface for making REST requests to University of Arizona Box file storage."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license="MIT"

[tool.poetry.dependencies]
python = "^3.12"
box-sdk-gen = {extras = ["jwt"], version = "^1.5.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
